@@ -1,3 +1,8 @@
+[gui]
+# For use with the frame action button sprites
+flib-keep-open=Keep open
+flib-settings=Settings
+
 [mod-setting-name]
 flib-dictionary-levels-per-batch=Dictionary levels per batch [img=info]
 flib-translations-per-tick=Translations per tick [img=info]
